hphp/hack/test/typecheck/constraint_gen_fail1.php.exp
File "constraint_gen_fail1.php", line 17, characters 3-17:
Invalid assignment (Typing[4110])
File "constraint_gen_fail1.php", line 17, characters 11-17:
This is an object of type A (known to be exactly the class 'A')
File "constraint_gen_fail1.php", line 17, characters 15-15:
  where the class 'A' was referenced here
File "constraint_gen_fail1.php", line 16, characters 29-29:
It is incompatible with a value of generic type T
